k8strain3/network-网络/traefik/test/alidns-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: traefik-alidns-secret
  namespace: kube-system
data:
  ALICLOUD_ACCESS_KEY: TFRBSTV0SnRyTFV4NTRTcnE5bzhXem9H
  ALICLOUD_REGION_ID: Y24tcWluZ2Rhbw==
  ALICLOUD_SECRET_KEY: WVQ4Y016NEN6ZkQ3R1RpY0QyUjY2VTVTdEx1WHlS
type: Opaque
