k8strain3/network-网络/traefik/test/whoami-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata: 
  name: ingressroute-demo
spec: 
  entryPoints:
  - web
  routes:
  - match: Host(`who.tf.bltest.kutesmart.cn`) && PathPrefix(`/notls`)
    kind: Rule 
    services: 
    - name: whoami 
      port: 80
